--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -5,8 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:GHPC_Mod_Manager.Converters"
              xmlns:resources="clr-namespace:GHPC_Mod_Manager.Resources"
+             xmlns:models="clr-namespace:GHPC_Mod_Manager.Models"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
+    
+    <UserControl.Resources>
+        <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+    </UserControl.Resources>
     
     <Grid Margin="20" Background="{DynamicResource BackgroundBrush}">
         <Grid.RowDefinitions>
@@ -107,6 +114,20 @@
                                                Margin="0,2,0,0"/>
                                 </StackPanel>
                             </CheckBox>
+                            
+                            <!-- Proxy Server Selection -->
+                            <StackPanel Margin="20,5,0,0" Visibility="{Binding UseGitHubProxy, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                <TextBlock Text="{x:Static resources:Strings.GitHubProxyServer}" Margin="0,0,0,5"/>
+                                <ComboBox SelectedValue="{Binding GitHubProxyServer}" 
+                                          SelectedValuePath="Tag" 
+                                          Width="310" HorizontalAlignment="Left">
+                                    <ComboBoxItem Content="{x:Static resources:Strings.GhDmrGg}" Tag="{x:Static models:GitHubProxyServer.GhDmrGg}"/>
+                                    <ComboBoxItem Content="{x:Static resources:Strings.GhProxyCom}" Tag="{x:Static models:GitHubProxyServer.GhProxyCom}"/>
+                                    <ComboBoxItem Content="{x:Static resources:Strings.HkGhProxyCom}" Tag="{x:Static models:GitHubProxyServer.HkGhProxyCom}"/>
+                                    <ComboBoxItem Content="{x:Static resources:Strings.CdnGhProxyCom}" Tag="{x:Static models:GitHubProxyServer.CdnGhProxyCom}"/>
+                                    <ComboBoxItem Content="{x:Static resources:Strings.EdgeOneGhProxyCom}" Tag="{x:Static models:GitHubProxyServer.EdgeOneGhProxyCom}"/>
+                                </ComboBox>
+                            </StackPanel>
                         </StackPanel>
                         
                         <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
