--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="GHPC_Mod_Manager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GHPC_Mod_Manager">
+             xmlns:local="clr-namespace:GHPC_Mod_Manager"
+             xmlns:converters="clr-namespace:GHPC_Mod_Manager.Converters">
     <Application.Resources>
         <!-- 默认加载浅色主题 -->
         <ResourceDictionary>
@@ -9,6 +10,11 @@
                 <ResourceDictionary Source="/Themes/LightTheme.xaml"/>
                 <ResourceDictionary Source="/Themes/ControlStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            
+            <!-- Register converters -->
+            <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+            <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+            <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
