--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -109,16 +109,43 @@
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             
-                            <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,5">
+                            <!-- Control Buttons and Search in one row -->
+                            <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,5" HorizontalAlignment="Left">
                                 <Button Content="{x:Static resources:Strings.Refresh}" Command="{Binding RefreshDataCommand}" 
                                         Margin="0,0,5,0" MinWidth="80"
                                         Style="{DynamicResource FilledButtonStyle}"/>
                                 <Button Content="{x:Static resources:Strings.OpenGameRootDirectory}" Command="{Binding OpenGameRootDirectoryCommand}" 
-                                        MinWidth="120"
+                                        Margin="0,0,15,0" MinWidth="120"
                                         Style="{DynamicResource OutlinedButtonStyle}"/>
+                                
+                                <!-- Search Box -->
+                                <TextBlock Text="{x:Static resources:Strings.Search}" 
+                                          VerticalAlignment="Center" 
+                                          Margin="0,0,5,0"
+                                          Foreground="{DynamicResource OnSurfaceBrush}"/>
+                                <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" 
+                                         Width="250" 
+                                         VerticalAlignment="Center"
+                                         Margin="0,0,10,0"
+                                         Foreground="{DynamicResource OnSurfaceBrush}"
+                                         Background="{DynamicResource SurfaceBrush}"
+                                         BorderBrush="{DynamicResource OutlineBrush}"/>
+                                <TextBlock Text="{Binding FilteredModCount}" 
+                                           VerticalAlignment="Center" 
+                                           Foreground="{DynamicResource OutlineVariantBrush}" 
+                                           Margin="10,0,15,0"/>
+                                
+                                <!-- Check for Updates Button and Checkbox -->
+                                <Button Content="{x:Static resources:Strings.CheckForModUpdates}" Command="{Binding CheckForModUpdatesCommand}" 
+                                        Margin="0,0,10,0" MinWidth="140"
+                                        Style="{DynamicResource OutlinedButtonStyle}"/>
+                                <CheckBox IsChecked="{Binding OnlyCheckInstalledMods}" 
+                                          VerticalAlignment="Center" 
+                                          Content="{x:Static resources:Strings.OnlyCheckInstalledMods}"
+                                          Margin="0,0,0,0"/>
                             </StackPanel>
                             
-                            <DataGrid Grid.Row="1" ItemsSource="{Binding Mods}" 
+                            <DataGrid Grid.Row="1" ItemsSource="{Binding FilteredMods}" 
                                       SelectedItem="{Binding SelectedMod}" 
                                       AutoGenerateColumns="False" CanUserAddRows="False" 
                                       CanUserDeleteRows="False" IsReadOnly="True"
@@ -324,7 +351,7 @@
         
         <!-- Game Running Overlay -->
         <Grid Grid.Row="1" Background="{DynamicResource ScrimBrush}" 
-              Opacity="0.5"
+              Opacity="0.8"
               Visibility="{Binding IsGameRunning, Converter={StaticResource BooleanToVisibilityConverter}}">
             
             <Border Background="{DynamicResource SurfaceBrush}" 
